css/dashboard.css
#top_navigation_content { 
	position: relative; top:80px; }

	.jumbotron{position: relative; top:30px;}
.notRate
{
 float: right;
}
.answerBox{
  text-align: left; 
  display: block;
}
.bold{
  font-weight: bold;
}
.inLine{
  display: inline;
}
.btn {
	white-space: normal !important;
}
.bold{
	font-weight: bold;
}
.divToRate{
	display: inline;
	border-style: outset;
}
.inline{
	display: inline;
}

#menuRoller{
	position: absolute;
    width: 15px;
    min-height: 100%;
    padding: 0px 8px;
    padding-top: 220px;
    background: #343638;
	color:#ffffff;
}
/* Move down content because we have a fixed navbar that is 50px tall */
body {
  padding-top: 50px;
}


/*
 * Global add-ons
 */

.sub-header {
  padding-bottom: 10px;
  border-bottom: 1px solid #eee;
}

/*
 * Top navigation
 * Hide default border to remove 1px line.
 */
.navbar-fixed-top {
  border: 0;
}

/*
 * Sidebar
 */

/* Hide for mobile, show later */
.sidebar {
  display: none;
}
@media (min-width: 768px) {
  .sidebar {
    position: fixed;
    top: 51px;
    bottom: 0;
    left: 0;
    z-index: 1000;
    display: block;
    padding: 20px;
    overflow-x: hidden;
    overflow-y: auto; /* Scrollable contents if viewport is shorter than content. */
    background-color: #f5f5f5;
    border-right: 1px solid #eee;
  }
}

/* Sidebar navigation */
.nav-sidebar {
  margin-right: -21px; /* 20px padding + 1px border */
  margin-bottom: 20px;
  margin-left: -20px;
}
.nav-sidebar > li > a {
  padding-right: 20px;
  padding-left: 20px;
}
.nav-sidebar > .active > a,
.nav-sidebar > .active > a:hover,
.nav-sidebar > .active > a:focus {
  color: #fff;
  background-color: #428bca;
}


/*
 * Main content
 */

.main {
  padding: 20px;
}
@media (min-width: 768px) {
  .main {
    padding-right: 40px;
    padding-left: 40px;
  }
}
.main .page-header {
  margin-top: 0;
  position: absolute;
    left: 100px;
    top: 100px;
}


/*
 * Placeholder dashboard ideas
 */

.placeholders {
  margin-bottom: 30px;
  text-align: center;
}
.placeholders h4 {
  margin-bottom: 0;
}
.placeholder {
  margin-bottom: 20px;
}
.placeholder img {
  display: inline-block;
  border-radius: 50%;
}
Status API Training Shop Blog About
© 2016 GitHub, Inc. Terms Privacy Security Contact Help

